CargoCheck.log
    Checking yellowbox v0.1.0 (D:\source\YellowBox\src-tauri)
error[E0599]: no method named `emit` found for struct `AppHandle` in the current scope
   --> src\commands.rs:161:21
    |
161 |         let _ = app.emit(&format!("pipeline-started-{}", session_id), ());
    |                     ^^^^
    |
   ::: D:\packages\cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.2\src\lib.rs:952:6
    |
952 |   fn emit<S: Serialize + Clone>(&self, event: &str, payload: S) -> Result<()> {
    |      ---- the method is available for `AppHandle` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `exit` with a similar name, but with different arguments
   --> D:\packages\cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.2\src\app.rs:532:3
    |
532 |   pub fn exit(&self, exit_code: i32) {
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: trait `Emitter` which provides `emit` is implemented but not in scope; perhaps you want to import it
    |
1   + use tauri::Emitter;
    |

error[E0308]: mismatched types
   --> src\commands.rs:131:17
    |
131 |   ) -> Result<()> {
    |  _________________^
132 | |     let (dest_dir, db, cancel_token) = {
133 | |         let sessions = state.sessions.lock().unwrap();
134 | |         let session = sessions.get(&session_id).ok_or_else(|| "Session not found".to_string())?;
...   |
170 | | }
    | |_^ expected `Result<(), AppError>`, found `()`
    |
    = note:   expected enum `std::result::Result<(), AppError>`
            found unit type `()`

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `yellowbox` (lib) due to 2 previous errors
